# esp-speaker

./: Cargo.toml  partitions.csv
.cargo/: config.toml
src/: board.rs  boot.rs  button.rs  config.rs  lib.rs  mqtt.rs  nvs.rs  rtc.rs  time.rs
src/audio/: codec.rs  mod.rs  sine.rs  task.rs
src/html/: portal.html
src/led/: animations.rs  mod.rs  task.rs  ws2812.rs
src/mqtt/: mod.rs  mqtt.rs  msg_protocol.rs
src/wifi/: ap.rs  mod.rs  sta.rs
